Decoration - IBorder.java - Added method for width retrieval - WebDecoration.java - Now uses border width to calculate proper border insets - LineBorder.java - Optimized to avoid painting when fully transparent - AbstractDecorationPainter.java - Now installs and uninstalls listeners within protected overrideable methods
CheckBoxTree
- WebExCheckBoxTree.java - Added constructors passing StyleId through
- checkboxtree.xml, tree.xml - Added proper styling for the tristate checkbox renderer
- skin.xml - Enabled checkbox tree skin

CheckBoxList
- skin.xml - Enabled checkbox list skin

Tree, List
- tree.xml, list.xml - Removed tree padding and simplified selection styling

Frame, Dialog
- WebRootPanePainter.java - Improvements to the way window focus state is updated
- frame.xml, dialog.xml - Added to have separate from root pane and each other styles
- frame.xml, dialog.xml - Now use slightly different styles for focused window state
- rootpane.xml - Moved decorated frame and dialog into appropriate skins
- skin.xml - Added frame and dialog skins usage

DateField
- datefield.xml - Improvements for popup calendar style

ScrollPane
- WebScrollPaneStyle.java - Removed as redundant
- scrollpane.xml - Added "nofocus" style to the list of default styles

Popup
- WebPopup.java - Can now be styled through state decorations
- PopupManager.java, webpopup.xml - Removed deprecated 9-patch resources
- ShadeLayerStyle.java - Removed as redundant
- skin.xml - Enabled popup skin

FileDrop
- filedrop.xml - Updated to work with new decoration system
- skin.xml - Enabled file drop skin

Utilities
- FileUtils.java - Optimized for null absolute path cases

DemoApplication
- WebCheckBoxTreeExample.java - Added checkbox tree example
- Added a few resource links into demo statusbar

--- a/modules/demo/src/com/alee/demo/language/language.xml
+++ b/modules/demo/src/com/alee/demo/language/language.xml
@@ -1,8 +1,24 @@
 <Dictionary name="Demo Application language" prefix="demo" author="Alee Software" creationDate="03.09.2015">
-    <record key="github">
-        <value lang="en">Project on GitHub</value>
-        <value lang="ru">Проект на GitHub</value>
-    </record>
+    <Dictionary name="Resources" prefix="statusbar">
+        <Dictionary name="Resources" prefix="resources">
+            <record key="weblaf">
+                <value lang="en">Official site</value>
+                <value lang="ru">Оффициальный сайт</value>
+            </record>
+            <record key="github">
+                <value lang="en">GitHub project</value>
+                <value lang="ru">GitHub проект</value>
+            </record>
+            <record key="gitter">
+                <value lang="en">Chat on Gitter</value>
+                <value lang="ru">Чат на Gitter</value>
+            </record>
+        </Dictionary>
+        <record key="ram">
+            <value lang="en">Used memory</value>
+            <value lang="ru">Используемая память</value>
+        </record>
+    </Dictionary>
     <Dictionary name="Feature state" prefix="state">
         <record key="beta">
             <value lang="en">Beta</value>
@@ -1119,6 +1135,24 @@
                         <record key="title">
                             <value lang="en">Drag &amp; drop</value>
                             <value lang="ru">Drag &amp; drop</value>
+                        </record>
+                    </Dictionary>
+                </Dictionary>
+                <Dictionary prefix="webcheckboxtree">
+                    <record key="title">
+                        <value lang="en">WebCheckBoxTree</value>
+                        <value lang="ru">WebCheckBoxTree</value>
+                    </record>
+                    <Dictionary prefix="basic">
+                        <record key="title">
+                            <value lang="en">Basic</value>
+                            <value lang="ru">Базовое</value>
+                        </record>
+                    </Dictionary>
+                    <Dictionary prefix="custom">
+                        <record key="title">
+                            <value lang="en">Customized</value>
+                            <value lang="ru">Кастомизированное</value>
                         </record>
                     </Dictionary>
                 </Dictionary>
