Calendar - language.xml - Adjusted `de` translation for week number column title [ #189 ]

--- a/modules/core/src/com/alee/managers/language/resources/language.xml
+++ b/modules/core/src/com/alee/managers/language/resources/language.xml
@@ -1457,7 +1457,7 @@
                 <value lang="es">#</value>
                 <value lang="fr">#</value>
                 <value lang="pt">#</value>
-                <value lang="de">#</value>
+                <value lang="de">KW</value>
                 <value lang="it">#</value>
                 <value lang="tr">#</value>
             </record>
