Decoration - AbstractContent.java - Added settings overwrite support - LineContent.java - Removed redundant padding setting, it is now available for all contents by default - LineContent.java - Added `align` option to enable customizeable line positioning within its bounds - AbstractTextContent.java - Added `UIResource` check for foreground color to only ignore colors installed by UIs - AbstractStyledTextContent.java - Removed text listening as redundant because styles are always updated on text change - WebHotkeyLabelBackground.java - Replacement for `HotkeyLabelPainter` implementation - HotkeyLabelPainter.java - Removed as deprecated - AlphaLayerBackground.java - Fixed fields merging
Style
- label.xml, styledlabel.xml - Text painting is now fully content-based
- label.xml, styledlabel.xml - Added two distinct vertical label styles instead of generalized one
- label.xml, styledlabel.xml - Added `icon` style which always paints only label icon
- hotkeylabel.xml - Modified to use content-based text painting
- Renamed some old style names for convenience

Tree
- WebTreeCellRenderer.java - Added style ranges property as fireable

General
- WebLookAndFeel.java - Proper `UIResource` colors are now used

Demo
- DemoApplication.java - Minor style improvement

--- a/modules/demo/src/com/alee/demo/language/language.xml
+++ b/modules/demo/src/com/alee/demo/language/language.xml
@@ -132,9 +132,9 @@
                         <value lang="ru">Простой текст</value>
                     </record>
                 </Dictionary>
-                <Dictionary prefix="shade">
+                <Dictionary prefix="shadow">
                     <record key="title">
-                        <value lang="en">Text with shade</value>
+                        <value lang="en">Text with shadow</value>
                         <value lang="ru">Текст с тенью</value>
                     </record>
                 </Dictionary>
@@ -144,10 +144,16 @@
                         <value lang="ru">Стилизация тэга</value>
                     </record>
                 </Dictionary>
-                <Dictionary prefix="vertical">
+                <Dictionary prefix="ccw">
                     <record key="title">
-                        <value lang="en">Vertical text</value>
-                        <value lang="ru">Вертикальный текст</value>
+                        <value lang="en">Counter-clockwise text</value>
+                        <value lang="ru">Текст против часовой</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="cw">
+                    <record key="title">
+                        <value lang="en">Clockwise text</value>
+                        <value lang="ru">Текст по часовой</value>
                     </record>
                 </Dictionary>
             </Dictionary>
@@ -162,16 +168,22 @@
                         <value lang="ru">Простой текст</value>
                     </record>
                 </Dictionary>
-                <Dictionary prefix="shade">
+                <Dictionary prefix="shadow">
                     <record key="title">
-                        <value lang="en">Text with shade</value>
+                        <value lang="en">Text with shadow</value>
                         <value lang="ru">Текст с тенью</value>
                     </record>
                 </Dictionary>
-                <Dictionary prefix="vertical">
+                <Dictionary prefix="ccw">
                     <record key="title">
-                        <value lang="en">Vertical text</value>
-                        <value lang="ru">Вертикальный текст</value>
+                        <value lang="en">Counter-clockwise text</value>
+                        <value lang="ru">Текст против часовой</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="cw">
+                    <record key="title">
+                        <value lang="en">Clockwise text</value>
+                        <value lang="ru">Текст по часовой</value>
                     </record>
                 </Dictionary>
             </Dictionary>
